--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,10 +33,10 @@ Cette page est mon gabarit.-->
                     <span></span>
                     <span></span>
                     <ul class="container" id="menu">
-                        <a href='#'><li class="col">SESSIONS</li></a>
-                        <a href='#'><li class="col">SKATEPARKS</li></a>
-                        <a href='#'><li class="col">CLUBS</li></a>
-                        <a href='#'><li class="col">SHOPS</li></a>
+                        <a href="{{ path('sessions') }}"><li class="col">SESSIONS</li></a>
+                        <a href="{{ path('skateparks') }}"><li class="col">SKATEPARKS</li></a>
+                        <a href="{{ path('clubs') }}"><li class="col">CLUBS</li></a>
+                        <a href=="{{ path('shops') }}"><li class="col">SHOPS</li></a>
                     </ul>
                 </div>
             </li>
