--- a/templates/shop.html.twig
+++ b/templates/shop.html.twig
@@ -7,7 +7,7 @@
 {% block main %}
     <article class="book-detail">
         <img class="title" src="{{ asset('icon/shops_titre.png') }}" alt="Shop">
-        <img class="title" src="{{ asset('icon/') }}" alt="Shop">
+        <img class="title" src="{{ asset('icon/shops.png') }}" alt="Shop">
         {#        <div class="book-image">#}
         {#            <img class="book-image" src="{{ book.image }}" title="{{ book.title }}" alt="photo de la couverture du livre">#}
         {#        </div>#}
