--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,7 +36,7 @@ Cette page est mon gabarit.-->
                         <a href="{{ path('sessions') }}"><li class="col">SESSIONS</li></a>
                         <a href="{{ path('skateparks') }}"><li class="col">SKATEPARKS</li></a>
                         <a href="{{ path('clubs') }}"><li class="col">CLUBS</li></a>
-                        <a href=="{{ path('shops') }}"><li class="col">SHOPS</li></a>
+                        <a href="{{ path('shops') }}"><li class="col">SHOPS</li></a>
                     </ul>
                 </div>
             </li>
