--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -1,5 +1,5 @@
 <!-- base.html.twig, intègre mon header et mon footer
-pour conserver le même header et footer dans chacques pages,
+pour conserver le même header et footer dans chaques pages,
 pour éviter de les copier à chaque fois sur une page.
 Cette page est mon gabarit.-->
 <!DOCTYPE html>
@@ -8,71 +8,55 @@ Cette page est mon gabarit.-->
     <meta charset="UTF-8">
     <!--Dans le title de ma page base, j'appelle la fonction block metatitle qui va me permettre
     d'afficher mon metatitle sur toutes les pages de mon site-->
-    <title>{% block metatitle %}Skateboard Social club{% endblock metatitle%}</title>
+    <title>{% block metatitle %}Welcome{% endblock metatitle%}| Skateboard Social club</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100&display=swap" rel="stylesheet">
     <!--J'utilise la balise link et la fonction asset pour rattacher ma feuille de style à mon html-->
     <link rel="stylesheet" href="{{ asset('css/details.css') }}">
-    <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/burger.css') }}">
 
 </head>
 <body>
-<header>
-    <img src="{{ asset('logo/logo_blanc_trans.png') }}" alt="logo" class="logo left resp">
-    <nav>
-        <ul>
-            <li><img src="{{ asset('icon/loupe.png') }}" alt="loupe" class=""></li>
-            <li><img src="{{ asset('icon/login.png') }}" alt="login" class=""></li>
-            <li>
-                <ul id="menu" class="right">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
-            </li>
-        </ul>
-    </nav>
-    <nav class="relative">
-        <div class="absol" id="logo">
-            <img src="img/logo.png" alt="logo" class="resp">
-            <img src="{{ asset('logo/logo_blanc_trans.png') }}" alt="logo" class="logo left resp">
-        </div>
-        <div class="absol" id="logo">
-            <img src="{{ asset('icon/loupe.png') }}" alt="loupe" class="">
-            <img src="{{ asset('icon/login.png') }}" alt="login" class="">
-        </div>
-        <ul id="hamb" class="absol">
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
-        <ul id="menu">
-            <li><a href="#skatepark">Skatepark</a></li>
-            <li><a href="#club">Club</a></li>
-            <li><a href="#session">Session</a></li>
-            <li><a href="#shop">Shop</a></li>
-        </ul>
-    </nav>
-
-</header>
-
+    <header>
+        <nav role='navigation'>
+            <a href="{{ path('home') }}" class="marge">
+                <img src="{{ asset('logo/logo_blanc_trans.png') }}" alt="logo" class="left logo resp">
+            </a>
+            <ul>
+                <li><a><img src="{{ asset('icon/loupe.png') }}" alt="loupe" class=""></a></li>
+                <li><a><img src="{{ asset('icon/login.png') }}" alt="login" class="">
+                  <!--  <div id="menuToggle2">
+                        <input type="checkbox"/>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <ul class="container" id="login">
+                            <a href="{{ path('sessions') }}"><li class="col">Login</li></a>
+                            <a href="{{ path('skateparks') }}"><li class="col">Setup</li></a>
+                            <a href="{{ path('shops') }}"><li class="col">Logout</li></a>
+                        </ul>
+                    </div>
+                    -->
+                    </a>
+                </li>
+                <li>
+                    <div id="menuToggle">
+                        <input type="checkbox"/>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <ul class="container" id="menu">
+                            <a href="{{ path('sessions') }}"><li class="col">SESSIONS</li></a>
+                            <a href="{{ path('skateparks') }}"><li class="col">SKATEPARKS</li></a>
+                            <a href="{{ path('clubs') }}"><li class="col">CLUBS</li></a>
+                            <a href="{{ path('shops') }}"><li class="col">SHOPS</li></a>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+        </nav>
+    </header>
 <main>
 
-    {% block main %}{% endblock main %}
-
-</main>
-<footer class="footer">
-</footer>
-</body>
-</html>
-
-
-
-
-
-
-<p>
-    Suspendisse potenti. Proin eget est dui. Praesent faucibus, lectus nec porta pretium, nulla elit suscipit orci, a scelerisque diam erat sit amet magna. Sed mattis tempor lacus, sed fermentum arcu bibendum non. Vivamus molestie laoreet laoreet. Proin ullamcorper magna non tincidunt maximus. Nulla convallis sem ac augue elementum, sit amet aliquam lectus luctus.
-</p>
