--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,140 +1,61 @@
-<!-- base.html.twig, intègre mon header et mon footer
-pour conserver le même header et footer dans chacques pages,
-pour éviter de les copier à chaque fois sur une page.
-Cette page est mon gabarit.-->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <!--Dans le title de ma page base, j'appelle la fonction block metatitle qui va me permettre
-    d'afficher mon metatitle sur toutes les pages de mon site-->
-    <title>{% block metatitle %}Skateboard Social club{% endblock metatitle%}</title>
+    <head>
+        <meta charset="UTF-8">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100&display=swap" rel="stylesheet">
-    <!--J'utilise la balise link et la fonction asset pour rattacher ma feuille de style à mon html-->
-    <link rel="stylesheet" href="{{ asset('css/details.css') }}">
-    <link rel="stylesheet" href="{{ asset('css/burger.css') }}">
+        <title>{% block metatitle %}{% endblock metatitle%}</title>
 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="{{ asset('css/details.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/burger.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/search.css') }}">
 
-</head>
+    </head>
 <body>
-<header>
-    <nav role='navigation'>
-        <a class="marge"><img src="{{ asset('logo/logo_blanc_trans.png') }}" alt="logo" class="left logo resp"></a>
-        <ul>
-            <li><img src="{{ asset('icon/loupe.png') }}" alt="loupe" class=""></li>
-            <li><img src="{{ asset('icon/login.png') }}" alt="login" class=""></li>
-            <li>
-                <div id="menuToggle">
-                    <input type="checkbox"/>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <ul class="container" id="menu">
-                        <a href="{{ path('sessions') }}"><li class="col">SESSIONS</li></a>
-                        <a href="{{ path('skateparks') }}"><li class="col">SKATEPARKS</li></a>
-                        <a href="{{ path('clubs') }}"><li class="col">CLUBS</li></a>
-                        <a href="{{ path('shops') }}"><li class="col">SHOPS</li></a>
-                    </ul>
-                </div>
-            </li>
-        </ul>
-    </nav>
-
-<!--
-    <nav>
-            <a><img src="{{ asset('logo/logo_blanc_trans.png') }}" alt="logo" class="left logo resp"></a>
+    <header>
+        <nav role='navigation'>
+            <a href="{{ path('home') }}" class="marge">
+                <img src="{{ asset('logo/logo_blanc_trans.png') }}" alt="logo" class="left logo resp">
+            </a>
             <ul>
-
-                <li><img src="{{ asset('icon/loupe.png') }}" alt="loupe" class=""></li>
-                <li><img src="{{ asset('icon/login.png') }}" alt="login" class=""></li>
+                <li><a><img src="{{ asset('icon/loupe.png') }}" alt="loupe" class=""></a></li>
+                <li><a>{% block search %}<img src="{{ asset('icon/loupe.png') }}" alt="loupe" class="">{% endblock search %}</a></li>
+                <li><a><img src="{{ asset('icon/login.png') }}" alt="login" class=""></a></li>
                 <li>
-                    <div class="dropdown">
-                        <button class="dropbtn "><img src="{{ asset('icon/burger.png') }}" alt="login" class=""></button>
-                        <div class="dropdown-content">
-                            <a href="#">Link 1</a>
-                            <a href="#">Link 2</a>
-                            <a href="#">Link 3</a>
-                        </div>
+                    <div id="menuToggle">
+                        <input type="checkbox"/>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <ul class="cont" id="menu">
+                            <a href="{{ path('sessions') }}"><li class="col">SESSIONS</li></a>
+                            <a href="{{ path('skateparks') }}"><li class="col">SKATEPARKS</li></a>
+                            <a href="{{ path('clubs') }}"><li class="col">CLUBS</li></a>
+                            <a href="{{ path('shops') }}"><li class="col">SHOPS</li></a>
+                        </ul>
                     </div>
                 </li>
             </ul>
-    </nav>
-    <nav>
-        <a><img src="{{ asset('logo/logo_blanc_trans.png') }}" alt="logo" class="left logo resp"></a>
-        <ul>
-
-            <li><img src="{{ asset('icon/loupe.png') }}" alt="loupe" class=""></li>
-            <li><img src="{{ asset('icon/login.png') }}" alt="login" class=""></li>
-            <li>
-                <div class="dropdown">
-                    <button class="dropbtn "><img src="{{ asset('icon/burger.png') }}" alt="login" class=""></button>
-                    <div class="dropdown-content">
-                        <a href="#">Link 1</a>
-                        <a href="#">Link 2</a>
-                        <a href="#">Link 3</a>
-                    </div>
-                </div>
-            </li>
-        </ul>
-    </nav>
-    -->
-    <!--
-    <nav role="navigation">
-        <a class="marge"><img src="{{ asset('logo/logo_blanc_trans.png') }}" alt="logo" class="left logo resp"></a>
-        <ul>
-            <li><img src="{{ asset('icon/loupe.png') }}" alt="loupe" class=""></li>
-            <li><img src="{{ asset('icon/login.png') }}" alt="login" class=""></li>
-            <li><div id="menuToggle">
-                    <input type="checkbox"/>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <ul class="container" id="menu">
-                        <a href='#'><li class="col">SESSION</li></a>
-                        <a href='#'><li class="col">SKATEPARKS</li></a>
-                        <a href='#'><li class="col">CLUBS</li></a>
-                        <a href='#'><li class="col">SHOPS</li></a>
-                    </ul>
-                </div>
-            </li>
-        </ul>
-    </nav>
-    -->
-
-   <!--
-    <nav role="navigation">
-        <a class="marge"><img src="{{ asset('logo/logo_blanc_trans.png') }}" alt="logo" class="left logo resp"></a>
-        <ul>
-            <li><img src="{{ asset('icon/loupe.png') }}" alt="loupe" class=""></li>
-            <li><img src="{{ asset('icon/login.png') }}" alt="login" class=""></li>
-            <li><div id="menuToggle">
-                    <input type="checkbox"/>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <ul class="container" id="menu">
-                        <a href='#'><li class="col">SESSION</li></a>
-                        <a href='#'><li class="col">SKATEPARKS</li></a>
-                        <a href='#'><li class="col">CLUBS</li></a>
-                        <a href='#'><li class="col">SHOPS</li></a>
-                    </ul>
-                </div>
-            </li>
-        </ul>
-    </nav>
-        -->
-</header>
-
-<main>
+        </nav>
+    </header>
+<main id="main">
 
     {% block main %}{% endblock main %}
 
 </main>
-<footer class="footer">
-</footer>
+    <footer class="footer">
+        <nav>
+            <ul>
+                <a href="#main" class="marge">
+                    <li>
+                        <img src="{{ asset('icon/fleche_droite.png') }}" alt="logo" class="left logo resp arrow">
+                 </li>
+                </a>
+            </ul>
+        </nav>
+    </footer>
 
 </body>
 </html>
