--- a/templates/shops.html.twig
+++ b/templates/shops.html.twig
@@ -1,6 +1,13 @@
 {% extends "base.html.twig" %}
 
-{% block stylesheets %}<link rel="stylesheet" href="{{ asset('css/home.css') }}">{% endblock stylesheets %}
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('css/details.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/burger.css') }}">
+{% endblock stylesheets %}
+
+{% block metatitle %}
+    Shops | Skateboard Social Club
+{% endblock metatitle %}
 
 {% block main %}
     <main>
